--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ plugins {
 }
 
 apply plugin: 'io.spring.dependency-management'
-apply plugin: 'war'
+//apply plugin: 'war'
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
@@ -23,10 +23,8 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter'
     compile 'org.springframework.boot:spring-boot-starter-web'
     compile 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
-    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
-    testCompile('org.springframework.boot:spring-boot-starter-test') {
-        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-    }
+    //providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+    testCompile 'org.springframework.boot:spring-boot-starter-test'
     //compile group: 'org.elasticsearch', name: 'elasticsearch', version: '5.6.8'
     //compile group: 'org.elasticsearch.client', name: 'transport', version: '5.6.8'
     //compile group: 'org.elasticsearch.plugin', name: 'transport-netty4-client', version: '5.6.8'
