--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,10 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-web'
     compile 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
     //providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
-    testCompile 'org.springframework.boot:spring-boot-starter-test'
+//    testCompile 'org.springframework.boot:spring-boot-starter-test'
+//    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.1'
+//    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.1'
+
     //compile group: 'org.elasticsearch', name: 'elasticsearch', version: '5.6.8'
     //compile group: 'org.elasticsearch.client', name: 'transport', version: '5.6.8'
     //compile group: 'org.elasticsearch.plugin', name: 'transport-netty4-client', version: '5.6.8'
@@ -36,4 +39,3 @@ dependencies {
 test {
     useJUnitPlatform()
 }
-
